hphp/hack/test/typecheck/nullable_compare.php.exp
File "nullable_compare.php", line 8, characters 10-22:
This comparison has invalid types.  Only comparisons in which both arguments are strings, nums, or DateTime are allowed (Typing[4240])
File "nullable_compare.php", line 3, characters 13-13:
This is an int
File "nullable_compare.php", line 8, characters 19-22:
This is a nullable type
